log
Fri 19 Aug 2022 12:22:41 PM UTC: 
 tests:  0|6
total_score: 0/70
1ecb695
Fri 19 Aug 2022 12:36:45 PM UTC: 
 list.c | 64 ++++++++++++++++++++++++++++++++++++++++++++++++++--------------
 1 file changed, 50 insertions(+), 14 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:3: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   34 |   list->head = NULL;
      |   ^~~~
      |   lista
list.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:38:10: error: incompatible types when returning type ‘List’ {aka ‘struct List’} but ‘List *’ {aka ‘struct List *’} was expected
   38 |   return *lista;
      |          ^~~~~~
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7e89b23
Fri 19 Aug 2022 12:38:07 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:10: error: incompatible types when returning type ‘List’ {aka ‘struct List’} but ‘List *’ {aka ‘struct List *’} was expected
   38 |   return *lista;
      |          ^~~~~~
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
53a460f
Fri 19 Aug 2022 12:38:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a794c97
Fri 19 Aug 2022 12:44:21 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
da56bcb
Fri 19 Aug 2022 12:49:16 PM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
6ec5141
Fri 19 Aug 2022 12:53:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7b08170
Fri 19 Aug 2022 12:54:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
de1d2d3
Fri 19 Aug 2022 01:00:56 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
e4a9680
Fri 19 Aug 2022 01:10:45 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
a2a267f
Fri 19 Aug 2022 01:12:40 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
23f81b2
Fri 19 Aug 2022 01:13:47 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
2c927dd
Sat 20 Aug 2022 12:12:41 AM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:74:25: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   74 |   return list->current->dato;
      |                         ^~~~
      |                         data
list.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
   75 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fac2316
Sat 20 Aug 2022 12:12:53 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
e42d263
Sat 20 Aug 2022 12:16:05 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
409feea
Sat 20 Aug 2022 12:16:59 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
519a4ef
Sat 20 Aug 2022 12:48:48 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:93:31: error: expected expression before ‘void’
   93 |   Node * nuevito = createNode(void * data);
      |                               ^~~~
Compilation failed
4a533d7
Sat 20 Aug 2022 12:49:14 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:93:32: error: dereferencing ‘void *’ pointer [-Werror]
   93 |   Node * nuevito = createNode( * data);
      |                                ^~~~~~
list.c:93:32: error: invalid use of void expression
cc1: all warnings being treated as errors
Compilation failed
e6fc840
Sat 20 Aug 2022 12:49:40 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:93:31: error: expected expression before ‘void’
   93 |   Node * nuevito = createNode(void *data);
      |                               ^~~~
Compilation failed
1a941df
Sat 20 Aug 2022 12:50:19 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
16cb390
Sat 20 Aug 2022 12:51:03 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:96:11: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   96 |     return(NULL);
      |           ^
list.c:91:6: note: declared here
   91 | void pushFront(List * list, void * data)
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5e1490a
Sat 20 Aug 2022 12:52:26 AM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
ae14b39
Sat 20 Aug 2022 12:54:01 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
417deee
Sat 20 Aug 2022 01:03:52 AM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:123:12: error: statement with no effect [-Werror=unused-value]
  123 |   siguiente->prev
      |   ~~~~~~~~~^~~~~~
list.c:123:18: error: expected ‘;’ before ‘siguiente’
  123 |   siguiente->prev
      |                  ^
      |                  ;
  124 |   siguiente = nodo;
      |   ~~~~~~~~~       
cc1: all warnings being treated as errors
Compilation failed
4413910
Sat 20 Aug 2022 01:04:58 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
fd16dd0
Sat 20 Aug 2022 01:10:49 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
f63401a
Sun 21 Aug 2022 08:49:45 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
bd946ef
